# render_engine

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  ListTodo.txt  README.md  default.cmake
.circleci/: config.yml
apps/demos/: CMakeLists.txt  DemoInfrastructure.hpp  demo1.cpp  demo2.cpp
cmake/modules/: FindAssimp.cmake  FindOSMesa.cmake  HelperMacros.cmake
media/: blender_plain_spheres.blend  cube.dae  scene.mtl  sphere_with_texture.dae
scripts/: clang-diff-format.sh
shader/: light.frag  lightDepth.frag  lightDepth.vert  point.frag  point.vert  shadow.frag  shadow.vert  simple.frag  simple.shader  simple.vert
src/: CMakeLists.txt
src/DearImGui/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/example_shadergenerator/: main.cpp  test.shader
src/apps/simple/: main.cpp
src/apps/skeletal/: CMakeLists.txt  main.cpp
src/components/: CMakeLists.txt  DefaultGlslShader.glslgen  GLArrayBufferDrawer.cpp  GLArrayBufferDrawer.hpp  GLComponents  GLCubeStripRenderFunction.cpp  GLCubeStripRenderFunction.hpp  GLMolecularProgram.cpp  GLMolecularProgram.hpp  GLMolecularProgramGenerator.cpp  GLMolecularProgramGenerator.hpp  GLProgramGenerator.cpp  GLProgramGenerator.hpp  GLProgramObject.cpp  GLProgramObject.hpp  GLRenderFunction.cpp  GLRenderFunction.hpp  Singleton.hpp  Variable.hpp
src/components/tests/: TestComponents.cpp
src/context-creators/: CMakeLists.txt  GLContextCreator.hpp  GLGlfwContextCreator.cpp  GLGlfwContextCreator.hpp  OpenGLGlfwContextCreator.cpp  OpenGLGlfwContextCreator.h
src/core/: CMakeLists.txt  Camera.hpp  DrowableObjManager.hpp  DrowableObject.hpp  FrameBuffer.hpp  GLArrayBuffer.hpp  GLBuffer.cpp  GLBuffer.hpp  GLDefinitions.cpp  GLDefinitions.hpp  GLElementArrayBuffer.hpp  GLFrameBufferObject.cpp  GLFrameBufferObject.hpp  GLObject.hpp  GLObjectBinder.cpp  GLObjectBinder.hpp  GLObjectFabric.hpp  GLProgram.cpp  GLProgram.hpp  GLRenderBuffer.hpp  GLShader.hpp  GLStateChangeHelpers.hpp  GLTexture.hpp  GLTextureUnit.hpp  GLVertexArray.hpp  GLWrapperCore  Manager.hpp  Mesh.hpp  MeshManager.hpp  Model.hpp  ModelManager.hpp  ProgramState.hpp  RenderContext.hpp  Renderable.hpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/core/include/: Buffer.hpp  Camera.hpp  InputHandler.hpp  Mesh.hpp  MeshManager.hpp  Model.hpp  ProgramState.hpp  RenderContext.hpp  Renderer.hpp  Singleton.hpp  Texture.hpp  TextureManager.hpp  types.hpp
src/core/src/: FrameBuffer.cpp  Mesh.cpp  Model.cpp  RenderContext.cpp  Texture.cpp  TextureManager.cpp
src/core/tests/: TestGlWrapper.cpp
src/deprecated/apps/example_shadergenerator/: main.cpp  test.shader
src/deprecated/apps/simple/: main.cpp
src/deprecated/core/: Buffer.hpp  Camera.hpp  Mesh.cpp  Model.cpp  RenderAbstraction.hpp  RenderContext.cpp  Shader.hpp
src/deprecated/physics/: RigidBody.h  RigidBodySystem.cpp  UpdateMethod.h
src/docs/: RenderingArchitecture.graphml
src/objects/: CMakeLists.txt  GLGeometryObjects
src/objects/camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp
src/objects/lights/: Light.hpp
src/objects/meshes/: MeshFactory.hpp  MeshObject.hpp  RegularSquareGridMesh.hpp
src/objects/tests/: TestCameraController.cpp
src/physics/: CMakeLists.txt  RigidBody.cpp  RigidBody.h  RigidBodySystem.cpp  RigidBodySystem.h
src/renderer/: CMakeLists.txt  GLAssetManager.cpp  GLAssetManager.hpp  GLCubeObject.hpp  GLMaterial.cpp  GLMaterial.hpp  GLRenderableObject.hpp  GLRenderer  GLScreenTextureRenderObject.hpp  GLTransformedObject.hpp  GLViewSetupRenderableObject.hpp  README.md
src/renderer/assets/: Cube.ply  Monkey.ply  MonkeySmooth.ply  Rectangle.ply  Triangle.ply
src/renderer/tests/: AssimpBasedLoader.cpp  TestRenderer.cpp
src/ui/qt/: CMakeLists.txt
src/ui/qt/app/: CMakeLists.txt  qmlapp.cpp
src/ui/qt/helpers/: CMakeLists.txt  EigenConversions.hpp
src/ui/qt/qmlmodules/Graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  Graphics.qmltypes  GraphicsQmlPlugin.cpp  GraphicsQmlPlugin.hpp  Lights.cpp  Lights.hpp  MeshObject.cpp  MeshObject.hpp  RenderDisplay.cpp  RenderDisplay.hpp  RenderableObject.cpp  RenderableObject.hpp  SceneView.cpp  SceneView.hpp  qmldir
src/ui/qt/qmlmodules/Graphics/demos/: CustomMeshes.qml  GraphicsDemo1.qml  MultiView.qml  TextureMaps.qml
src/util/: CMakeLists.txt  MathHelpers.hpp
src/util/tests/: TestUtilHelpers.cpp
staging/: CMakeLists.txt
staging/vulkan/: CMakeLists.txt
staging/vulkan/demos/: CMakeLists.txt  vulkan_initial.cpp
